# robot4ws_simulations

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: kinematics_config.yaml
data/link_data/state/: Archimede_base_link.csv  Archimede_fr_steer_link.csv
include/: archimede_get_body_pose.h  archimede_kinematics_plugin.h  archimede_odometry.h  constants.h  utility.h
launch/: archimede_gazebo_basic.launch  archimede_gazebo_gmapping.launch  archimede_gazebo_simulation_remote_controlled.launch  archimede_gazebo_simulation_with_kinematics.launch  archimede_gazebo_slam.launch  archimede_gazebo_world.launch  archimede_rviz.launch
robot4ws_simulations/: CMakeLists.txt  README.md  package.xml
robot4ws_simulations/config/: kinematics_config.yaml
robot4ws_simulations/include/: archimede_kinematics_plugin.h
robot4ws_simulations/launch/: archimede_gazebo_basic.launch  archimede_gazebo_simulation_with_kinematics.launch
robot4ws_simulations/src/: archimede_kinematics_plugin.cpp
rviz/: archimede.rviz
src/: archimede_get_body_pose.cpp  archimede_kinematics_plugin.cpp  archimede_odometry.cpp  utility.cpp
