<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_simulations</name>
  <version>1.0.0</version>
  <description>The robot4ws_simulations package</description>

  <maintainer email="matteo.caruso@phd.units.it">Matteo Caruso</maintainer>


  <license>GPLv3</license>



  <url type="website">http://wiki.ros.org/robot4ws_simulations</url>
  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot4ws_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>robot4ws_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot4ws_msgs</exec_depend>
  <exec_depend>tf</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <gazebo_ros plugin_path="${prefix}/src"/>
  </export>
</package>
